fixed overflow issue

--- a/views/css/contact.css
+++ b/views/css/contact.css
@@ -1,6 +1,6 @@
 #contact {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +8,7 @@
 }
 
 .con-head {
-    font-size: 50px;
+    font-size: 40px;
     color: #76ec7e;
 }
 
